--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
 .App {
   text-align: center;
+  max-width: 40vw;
+  max-height: 100vh;
+  height: 50vh;
+  margin-left: 25vw;
+  border-radius: 31px 31px 31px 31px;
+  -webkit-border-radius: 31px 31px 31px 31px;
+  -moz-border-radius: 31px 31px 31px 31px;
+  border: 2px solid #000000;
+  margin: 10px;
+  background-color: dimgray
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  color: white;
+  border-bottom: #000000 solid 2px;
+  padding: 10px;
+  background-color: rgb(52, 69, 179);
+  border-radius: 31px 31px 0px 0px;
+  -webkit-border-radius: 31px 31px 0px 0px;
+  -moz-border-radius: 31px 31px 0px 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.mailBody {
+  max-width: 100%;
+  height: 89%;
+  margin: 5px;
+  margin-right: 5px;
+  position: relative;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.collapsed {
+  width: 300px; /* or any initial size */
+  height: 100px; /* or any initial size */
+  overflow: hidden;
+  cursor: pointer;
+  margin: 5px;
+  border-radius: 31px 31px 31px 31px;
+  -webkit-border-radius: 31px 31px 31px 31px;
+  -moz-border-radius: 31px 31px 31px 31px;
+  border: 2px solid #000000;
+  background-color: #282c34;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.expanded {
+  width: 99%; /* full width of the viewport */
+  height: 100%; /* full height of the viewport */
+  top: 0;
+  left: 0;
+  position:absolute;
+  overflow: auto;
+  border-radius: 31px 31px 31px 31px;
+  -webkit-border-radius: 31px 31px 31px 31px;
+  -moz-border-radius: 31px 31px 31px 31px;
+  border: 2px solid #000000;
+  background-color: #282c34;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 30px; /* Center the 'X' vertically */
+  cursor: pointer;
+  font-size: 24px; /* Adjust size of 'X' as needed */
+  user-select: none; /* Prevents text selection */
 }
