--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@ header {
   -moz-border-radius: 9px 9px 9px 9px;
   border: 2px solid #000000;
   background-color: #282c34;
+  position: relative;
 }
 
 .expanded {
@@ -87,6 +88,6 @@ p {
 .delete-btn {
   position: absolute;
   top: 5px;
-  right: 5px;
+  left: 2px;
   /* Additional styling as needed */
 }
