--- a/src/tweet.css
+++ b/src/tweet.css
@@ -1,8 +1,8 @@
-.Mail {
+.Tweeter {
   text-align: center;
   max-width: 40vw;
   max-height: 100vh;
-  height: 45vh;
+  height: 30vh;
   margin-left: 25vw;
   border-radius: 9px 9px 9px 9px;
   -webkit-border-radius: 9px 9px 9px 9px;
@@ -12,28 +12,28 @@
   background-color: dimgray;
 }
 
-header {
+.tweetHeader {
   color: white;
   border-bottom: #000000 solid 2px;
   padding: 10px;
-  background-color: rgb(52, 69, 179);
+  background-color: rgb(186, 195, 255);
   border-radius: 9px 9px 0px 0px;
   -webkit-border-radius: 9px 9px 0px 0px;
   -moz-border-radius: 9px 9px 0px 0px;
 }
 
-.mailBody {
+.tweetBody {
   max-width: 100%;
-  height: 89%;
+  height: 82%;
   margin: 5px;
   margin-right: 5px;
   position: relative;
   color: white;
+  overflow: scroll;
 }
 
 .div {
   border-radius: 4px;
-  overflow: hidden;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2); /* subtle shadow */
   transition: box-shadow 0.3s ease;
 }
@@ -42,26 +42,9 @@ header {
   box-shadow: 0 4px 8px rgba(0,0,0,0.3); /* deeper shadow on hover */
 }
 
-.collapsed {
-  width: 300px; /* or any initial size */
-  height: 100px; /* or any initial size */
-  overflow: hidden;
-  cursor: pointer;
-  margin: 5px;
-  border-radius: 9px 9px 9px 9px;
-  -webkit-border-radius: 9px 9px 9px 9px;
-  -moz-border-radius: 9px 9px 9px 9px;
-  border: 2px solid #000000;
-  background-color: #282c34;
-  position: relative;
-}
-
-.expanded {
-  width: 99%; /* full width of the viewport */
-  height: 100%; /* full height of the viewport */
-  top: 0;
-  left: 0;
-  position: absolute;
+.tweet {
+  min-width: 99%; /* full width of the viewport */
+  height: 30%; /* full height of the viewport */
   overflow-x: hidden;
   border-radius: 9px 9px 9px 9px;
   -webkit-border-radius: 9px 9px 9px 9px;
@@ -70,7 +53,7 @@ header {
   background-color: #282c34;
   text-align: left;
   z-index: 1;
-  
+  margin-top: 2%;
 }
 
 .collapsed, .expanded {
@@ -79,11 +62,10 @@ header {
   cursor: pointer;
 }
 
-.collapsed h2, .expanded h2 {
+.tweet h2 {
   margin-top: 0;
   font-size: 1em; /* Material Design uses bold, simple headings */
 }
-
 
 h2 {
   margin-left: 5%;
