--- a/src/AIDashboardStyles.css
+++ b/src/AIDashboardStyles.css
@@ -1,10 +1,5 @@
 /* AIDashboardStyles.css */
 
-body {
-  background-color: #121212;
-  color: #e0e0e0;
-}
-
 .ai-dashboard {
   font-family: 'Roboto', sans-serif;
   text-align: center;
@@ -12,6 +7,12 @@ body {
   padding: 20px;
   border-radius: 8px;
   margin: 20px;
+  color: white;
+  width: 30vw;
+  height: fit-content;
+  position: fixed;
+  top: 1px;
+  right: 1px
 }
 
 .settings, .line-graph {
