--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,20 @@
-*{
+* {
   margin: 0;
   padding: 0;
- }
+}
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: antiquewhite;
-  background-image: url("wallaper.jpg");
-  background-size: 100vw;
+  user-select: none;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.minimize{
-  background-color: #f44336; /* Material Design red accent */
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  color: white;
-  border: 0px;
-  line-height: 20px; /* Center the 'X' vertically */
-  user-select: none; /* Prevents text selection */
-  font-size: 18px;
-  position: absolute;
-  right: 10px;
 }
