Added Icons and headbar + tweet sound

--- a/src/AIDashboardStyles.css
+++ b/src/AIDashboardStyles.css
@@ -8,6 +8,9 @@
   border-radius: 8px;
   margin: 20px;
   position: relative;
+  max-width: 20vw;
+  color: #FFF;
+  cursor: move;
 }
 
 .input-range {
