--- a/src/Desktop.css
+++ b/src/Desktop.css
@@ -2,6 +2,20 @@ body {
   background-image: url("wallaper.jpg");
   background-size: 100vw;
 }
+
+.statusBar {
+  width: 100vw;
+  height: 2vh;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: rgba(128, 128, 128, 0.546);
+  text-align: right;
+  color: white;
+}
+.clock{
+  margin-right: 5px;
+}
 .minimize {
   background-color: #f44336; /* Material Design red accent */
   border-radius: 50%;
@@ -16,19 +30,32 @@ body {
   right: 10px;
 }
 
-.dock{
-  background-color: rgba(48, 48, 48, 0.274);
+.dock {
+  background-color: rgba(129, 129, 129, 0.274);
   width: 30vw;
   height: 5ch;
   bottom: 5px;
   position: absolute;
   border-radius: 5px;
-  border: 1px solid;
+  border: 1px solid rgba(244, 244, 244, 0.665);
   left: 50%; /* Move the left edge to the center of the screen */
-  transform: translateX(-50%); /* Shift it back to the left by half its own width */
+  transform: translateX(
+    -50%
+  ); /* Shift it back to the left by half its own width */
   display: flex;
+  justify-content: center;
 }
 
-.icon{
-  margin: 5px;
+.iconSize {
+  width: fit-content;
+  height: 100%;
+  border-radius: 5px;
+  margin-inline: 10px;
+}
+
+.icon {
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 80%;
+  cursor: pointer;
 }
