--- a/src/Desktop.css
+++ b/src/Desktop.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("wallaper.jpg");
+  background-image: url("../public/space.jpg");
   background-size: 100vw;
 }
 
@@ -50,12 +50,15 @@ body {
   width: fit-content;
   height: 100%;
   border-radius: 5px;
-  margin-inline: 10px;
+  margin-inline: 5px;
+  background-color: white;
+  padding: 5px;
+  margin-top: -5px;
 }
 
 .icon {
   margin-top: auto;
   margin-bottom: auto;
-  height: 80%;
+  height: 70%;
   cursor: pointer;
 }
