--- a/src/tweet.css
+++ b/src/tweet.css
@@ -1,9 +1,7 @@
 
 /* Main Tweeter Container */
 .Tweeter {
-  max-width: 40vw;
-  max-height: 100vh;
-  height: 30vh;
+  height: fit-content;
   margin: 10px ; /* Centering the Tweeter */
   border-radius: 10px;
   border: 1px solid #333333; /* Subtle border */
@@ -27,7 +25,7 @@
 /* Tweeter Body */
 .tweetBody {
   max-width: 100%;
-  height: 82%;
+  height: 100%;
   padding: 10px;
   color: #E0E0E0;
   overflow-y: auto; /* Allowing vertical scroll */
