--- a/src/QuestionComponent.css
+++ b/src/QuestionComponent.css
@@ -5,6 +5,7 @@
     color: rgba(0, 0, 0, 0.85); /* High contrast text */
     box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
     position: fixed;
+    border-radius: 5px;
 }
 
 .ethHeader {
@@ -12,8 +13,12 @@
     border-bottom: 1px solid #333333;
     padding: 15px;
     position: relative;
-    background-color: #b9b9b9; /* Slightly lighter than the container for contrast */
+    background-color: #a9d4e4; /* Slightly lighter than the container for contrast */
     cursor: move;
+    height: fit-content;
+    text-align: center;
+    position: relative;
+    border-radius: 5px;
   }
 
 .ethCompassBody{
