--- a/src/Mail.css
+++ b/src/Mail.css
@@ -6,6 +6,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6); /* Adding shadow for depth */
   overflow: hidden; /* Ensuring no overflow */
   position: fixed;
+  z-index: 7;
 }
 
 .mailHeader {
