--- a/src/tweet.css
+++ b/src/tweet.css
@@ -8,6 +8,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6); /* Adding shadow for depth */
   overflow: hidden; /* Ensuring no overflow */
   position: fixed;
+  font-family:'Franklin Gothic Medium', 'Arial', Arial, sans-serif
 }
 
 /* Tweeter Header */
@@ -64,6 +65,7 @@
   color: #ffffff; /* White for readability */
   text-align: left;
   margin-left: 5px;
+  text-decoration:none;
 }
 
 /* Paragraphs inside Tweet */
