--- a/src/Strike.css
+++ b/src/Strike.css
@@ -4,22 +4,42 @@
     top: 0px;
     left: 0px;
     width: 100vw;
-    height: 100vw;
+    height: 100vh;
     pointer-events: none;
     z-index: 5;
-    text-align: center;
-    justify-content: center;
-}
+overflow: hidden;}
 
 .strikeBody .Mail {
     pointer-events: all;
 }
 
-.strikeBody button {
+.strikeBody .restartButton {
     pointer-events: all;
+    font-size: 48px;
+    padding: 5px;
+    background-color: rgba(255, 255, 255, 0);
+    border: black 2px solid;
+    border-radius: 10px;
+    color: black;
+    position: absolute;
+    bottom:20px;
+    right: 20px;
 }
+
+.strikeBody .restartButton:hover {
+   color: white;
+    border: rgb(255, 255, 255) 2px solid;
+    border-radius: 10px;
+}
+
 
 .strikeBody .matrix-plot{
     pointer-events: all;
     cursor: move;
 }
+
+.strikeBody h1{
+    font-size: 72px;
+    margin: 20px;
+}
+
