--- a/src/Strike.css
+++ b/src/Strike.css
@@ -1,45 +1,56 @@
 .strikeBody {
-    background-color: rgb(244, 70, 70);
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100vw;
-    height: 100vh;
-    pointer-events: none;
-    z-index: 5;
-overflow: hidden;}
+  background-color: rgb(244, 70, 70);
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  z-index: 5;
+  overflow: hidden;
+}
 
 .strikeBody .Mail {
-    pointer-events: all;
+  pointer-events: all;
 }
 
 .strikeBody .restartButton {
-    pointer-events: all;
-    font-size: 48px;
-    padding: 5px;
-    background-color: rgba(255, 255, 255, 0);
-    border: black 2px solid;
-    border-radius: 10px;
-    color: black;
-    position: absolute;
-    bottom:20px;
-    right: 20px;
+  pointer-events: all;
+  font-size: 48px;
+  padding: 5px;
+  background-color: rgba(255, 255, 255, 0);
+  border: black 2px solid;
+  border-radius: 10px;
+  color: black;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
 
 .strikeBody .restartButton:hover {
-   color: white;
-    border: rgb(255, 255, 255) 2px solid;
-    border-radius: 10px;
+  color: white;
+  border: rgb(255, 255, 255) 2px solid;
+  border-radius: 10px;
 }
 
-
-.strikeBody .matrix-plot{
-    pointer-events: all;
-    cursor: move;
+.strikeBody .matrix-plot {
+  pointer-events: all;
+  cursor: move;
 }
 
-.strikeBody h1{
-    font-size: 72px;
-    margin: 20px;
+.strikeBody h1 {
+  font-size: 72px;
+  margin: 20px;
 }
 
+.strikeBody .centeredImage {
+    display: block;          /* Ensures the image is treated as a block-level element */
+    margin-left: auto;       /* Automatically adjust the left margin to center the image */
+    margin-right: auto;      /* Automatically adjust the right margin to center the image */
+    position: absolute;      /* Position relative to its normal position */
+    top: 50%;                /* Push down from the top half of the screen */
+    left: 50%;               /* Push right from the left half of the screen */
+    transform: translate(-50%, -50%); /* Adjusts the positioning to be truly centered */
+    max-width: 90%;          /* Optional: limits the image width to 90% of the parent element */
+    max-height: 90%;         /* Optional: limits the image height to 90% of the parent element */
+  }
