--- a/src/proper/window.css
+++ b/src/proper/window.css
@@ -3,7 +3,17 @@
     --background-color: #F5F4E9;
     --border-radius: 0px;
     --font: monospace;
+    --padding: 15px;
+    --accent-color: #F5F4E9;
   }
+
+.mail{
+  --primary-color: #242424;
+  --background-color: #1e1e1e;
+  --border-radius: 0px;
+  --padding: 5px;
+  --accent-color:  #FFF;
+}
 
 .window {
     height: fit-content;
@@ -13,6 +23,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6); /* Adding shadow for depth */
     overflow: hidden; /* Ensuring no overflow */
     position: fixed;
+    top: 0px;
+    left: 0px;
     color: var(--primary-color);
     font-family: var(--font);
   }
@@ -32,7 +44,7 @@
   }
   
   .window header {
-    color: var(--background-color);
+    color: var(--accent-color);
     border-bottom: 1px solid #333333;
     padding: 15px;
     background-color: var(--primary-color); /* Slightly lighter than the container for contrast */
@@ -44,7 +56,7 @@
   .window .content {
     max-width: 100%;
     height: 100%;
-    padding: 15px;
+    padding: var(--padding);
     color: var(--primary-color);
     overflow-y: auto; /* Allowing vertical scroll */
     background-color: var(--background-color);
