Update styling imports and remove unused files

--- a/src/styling/Desktop.css
+++ b/src/styling/Desktop.css
@@ -1,8 +1,7 @@
-body {
-  background-image: url("../public/wallaper.jpg");
+body{
+  background-image: url('../../public/wall.jpg');
   background-size: 120vw;
   background-repeat: none;
-
 }
 
 *::-webkit-scrollbar {
