--- a/src/proper/window.css
+++ b/src/proper/window.css
@@ -1,83 +1,91 @@
 .note {
-    --primary-color: #CC5500;
-    --background-color: #F5F4E9;
-    --border-radius: 0px;
-    --font: monospace;
-    --padding: 15px;
-    --accent-color: #F5F4E9;
-  }
+  --primary-color: #cc5500;
+  --background-color: #f5f4e9;
+  --border-radius: 0px;
+  --font: monospace;
+  --padding: 15px;
+  --accent-color: #f5f4e9;
+}
 
-.mail{
+.mail {
   --primary-color: #242424;
   --background-color: #1e1e1e;
   --border-radius: 0px;
   --padding: 5px;
-  --accent-color:  #FFF;
+  --accent-color: #fff;
 }
 
-.ethics{
+.ethics {
   --primary-color: #494949;
   --background-color: #7b7b7b;
   --border-radius: 2px;
   --padding: 5px;
-  --accent-color:  #FFF;
+  --accent-color: #fff;
+}
+
+.tweeter {
+  --primary-color: #43486f; /* Slightly different from body for distinction */
+  --background-color: #43587f; /* Consistent with main container */
+  --border-radius: 2px;
+  --padding: 1px;
+  --accent-color: #fff;
+  --font: Tahoma;
 }
 
 .window {
-    height: fit-content;
-    border-radius: 10px;
-    border: 1px solid var(--primary-color);
-    background-color: var(--background-color);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6); /* Adding shadow for depth */
-    overflow: hidden; /* Ensuring no overflow */
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    color: var(--primary-color);
-    font-family: var(--font);
-  }
+  height: fit-content;
+  border-radius: 10px;
+  border: 1px solid var(--primary-color);
+  background-color: var(--background-color);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6); /* Adding shadow for depth */
+  overflow: hidden; /* Ensuring no overflow */
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  color: var(--primary-color);
+  font-family: var(--font);
+}
 
-  .minimize {
-    background-color: #f44336; /* Material Design red accent */
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    color: white;
-    border: 0px;
-    line-height: 20px; /* Center the 'X' vertically */
-    user-select: none; /* Prevents text selection */
-    font-size: 18px;
-    position: absolute;
-    right: 10px;
-  }
-  
-  .window header {
-    color: var(--accent-color);
-    border-bottom: 1px solid #333333;
-    padding: 15px;
-    background-color: var(--primary-color); /* Slightly lighter than the container for contrast */
-    border-radius: var(--border-radius);
-    position: relative;
-    cursor: move;
-  }
+.minimize {
+  background-color: #f44336; /* Material Design red accent */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  color: white;
+  border: 0px;
+  line-height: 20px; /* Center the 'X' vertically */
+  user-select: none; /* Prevents text selection */
+  font-size: 18px;
+  position: absolute;
+  right: 10px;
+}
 
-  .window .content {
-    max-width: 100%;
-    height: 100%;
-    padding: var(--padding);
-    color: var(--primary-color);
-    overflow-y: auto; /* Allowing vertical scroll */
-    background-color: var(--background-color);
-    overflow-x: hidden;
+.window header {
+  color: var(--accent-color);
+  border-bottom: 1px solid #333333;
+  padding: 15px;
+  background-color: var(
+    --primary-color
+  ); /* Slightly lighter than the container for contrast */
+  border-radius: var(--border-radius);
+  position: relative;
+  cursor: move;
+}
 
-  }
+.window .content {
+  max-width: 100%;
+  height: 100%;
+  padding: var(--padding);
+  color: var(--primary-color);
+  overflow-y: auto; /* Allowing vertical scroll */
+  background-color: var(--background-color);
+  overflow-x: hidden;
+}
 
-  /* Hover effect for interactive elements */
-  .div:hover,
-  .collapsed:hover,
-  .expanded:hover,
-  .delete-btn:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Deeper shadow on hover */
-  }
-  
-  
+/* Hover effect for interactive elements */
+.div:hover,
+.collapsed:hover,
+.expanded:hover,
+.delete-btn:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); /* Deeper shadow on hover */
+}
