--- a/src/styling/chat.css
+++ b/src/styling/chat.css
@@ -1,3 +1,11 @@
+:root {
+  --main-bg-color: #3d1e42; /* Slightly lighter than #2d142c */
+  --accent-color: #f1615f; /* Slightly lighter than #ee4540 */
+  --accent-dark: #6a1851; /* Slightly lighter than #510a32 */
+  --text-color-light: white;
+  --text-color-dark: #333;
+}
+
 .chatBody {
   height: 100%;
   display: grid;
@@ -7,32 +15,32 @@
 }
 
 .selectionContainer {
-  grid-row: 1;
+  grid-row: 1/3;
   grid-column: 1;
+  background-color: var(--main-bg-color);
 }
 
 .chatSelection {
-  border: 1px solid #510a32;
+  border: 1px solid var(--accent-dark);
   height: fit-content;
-  padding: 5px;
+  padding: 8px;
   border-radius: 5px;
 }
 
 .chatSelection.current {
-  background-color: #ee4540;
+  background-color: var(--accent-color);
   cursor: auto;
-  border-left: 1px solid #510a32;
+  border-left: 1px solid var(--accent-dark);
 }
 
 .chatSelection.not {
   cursor: pointer;
-  background-color: #510a32;
-  color: #ee4540;
-  border-left: 1px solid #ee4540;
+  background-color: var(--accent-dark);
+  color: var(--text-color-light);
 }
 
 .chatSelection.unavailable {
-  background-color: #2d142c;
+  background-color: var(--main-bg-color);
   cursor: not-allowed;
   pointer-events: all;
 }
@@ -42,7 +50,6 @@
   overflow-y: auto;
   padding: 10px;
   grid-column: 2/3;
-  border-left: 1px solid #510a32;
 }
 
 .message {
@@ -53,59 +60,55 @@
 }
 
 .user {
-  background-color: #ee4540;
+  background-color: lightgray;
   align-self: flex-end;
   text-align: end;
 }
 
 .assistant {
-  background-color: #800020;
+  background-color: var(--accent-dark);
   align-self: flex-start;
-  color: white;
+  color: var(--text-color-light);
 }
 
 .input-form {
   display: flex;
-  border-top: 1px solid #510a32;
+  border-top: 1px solid var(--accent-dark);
   padding: 10px;
-  background-color: #510a32;
+  background-color: var(--main-bg-color);
   grid-row: 2;
   grid-column: 2/3;
-  border-radius: 20px;
 }
 
 .input-form input {
   flex: 1;
   padding: 10px;
   margin-right: 5px;
-  border: 1px solid #510a32;
-  background-color: #ee4540;
-  color: #333;
+  border: 1px solid var(--accent-dark);
+  background-color: white;
+  color: var(--text-color-dark);
   border-radius: 4px;
 }
 
 .input-form button {
-  background-color: #800020;
-  color: white;
+  background-color: #6a1851;
+  color: var(--text-color-light);
   border: none;
   padding: 10px 15px;
   border-radius: 4px;
   cursor: pointer;
 }
 
-.input-form button:hover {
-  background-color: #800020;
-}
 .thinking-animation {
   display: inline-block;
   width: 20px;
   height: 20px;
-  color: #fdfdfd; /* You can change the color of dots here */
+  color: var(--text-color-light);
 }
 
 .thinking-animation::after {
   content: '•••';
-  font-size: 20px; /* Adjust size of dots */
+  font-size: 20px;
   animation: typing 1s steps(4, end) infinite;
 }
 
